# fitbit-obsidian-sync

./: .gitignore  README.md  pyproject.toml
scripts/: run_sync.py
src/fitbit_sync/: oauth2_flow.py  sync.py
